src/objects/Dev_Answer_Obj__c.object
<CustomObject>
    <description>回答者が問題に対して回答した内容を管理するオブジェクトです。
このオブジェクトは連結オブジェクトです。
プレフィックス「AN」</description>
    <fields>
        <fullName>Dev_AN_Answer__c</fullName>
        <description>問題に対してどの回答を行ったかを入力する項目です。</description>
        <label>回答</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_AN_CorrectAnswer__c</fullName>
        <description>回答した問題の正答を入力する項目です。</description>
        <label>正答</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dev_AN_ExaminationHistory__c</fullName>
        <description>この回答を行った試験履歴を参照します。</description>
        <label>試験履歴</label>
        <referenceTo>Dev_ExamHistory_Obj__c</referenceTo>
        <relationshipLabel>回答</relationshipLabel>
        <relationshipName>Dev_EH_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Dev_AN_Respondant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>この回答を行った回答者を選択します。</description>
        <label>回答者</label>
        <referenceTo>Dev_Respondant_Obj__c</referenceTo>
        <relationshipLabel>回答</relationshipLabel>
        <relationshipName>Dev_RE_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dev_AN_TargetQuestion__c</fullName>
        <description>回答の対象問題を選択する項目です。</description>
        <label>問題</label>
        <referenceTo>Dev_Question_Obj__c</referenceTo>
        <relationshipLabel>回答</relationshipLabel>
        <relationshipName>Dev_QU_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Dev_AN_isCorrect__c</fullName>
        <description>実際の回答と、正解が一致している場合は「○」を
一致していない場合は「✕」を出力します。</description>
        <formula>if(  Dev_AN_CorrectAnswer__c  = Dev_AN_Answer__c , &quot;○&quot;, &quot;×&quot; )</formula>
        <label>正誤</label>
        <type>Text</type>
    </fields>
    <label>回答</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>回答No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>